--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "npx prisma db push --force && node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npx prisma db push"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "Victor Bonifácio",
